# aoc-rs

./: Cargo.toml  README.md
src/: cli.rs  lib.rs  main.rs  solver.rs  web.rs
src/puzzles/: mod.rs  template.rs
src/puzzles/year2024/: day1.rs  day10.rs  day2.rs  day3.rs  day4.rs  day5.rs  day6.rs  day7.rs  day8.rs  day9.rs  mod.rs
src/tools/: cursor.rs  dfs.rs
