[package]
name = "aoc-rs-1npo"
version = "0.5.0"
authors = ["Nick O'Malley (1npo) <nickpeteromalley@gmail.com>"]
edition = "2021"
rust-version = "1.80.1"
description = "My attempt at using Rust to solve Advent of Code puzzles"
readme = "README.md"
license = "MIT"
keywords = ["advent-of-code", "aoc"]
categories = ["command-line-utilities"]

[dependencies]
regex = "1.11.1"
env_logger = "0.11.5"
log = "0.4"
clap = { version = "4.5.20", features = ["derive"] }
reqwest = { version = "0.12.9", features = ["blocking"] }
homedir = "0.3.4"

[[bin]]
name = "aoc-rs"
path = "src/main.rs"
test = true
edition = "2021"
